prover-ray/zkcdriver/testdata/synced/invalid/basic_14.zkc
//error:3:10-13:unknown variable
fn split(word:u32) -> (high:u8) {
   high::low = word
}
